240118 수정 장바구니 amount, delete 완료... 그런데... 계산을 못하겠네;

--- a/src/main/resources/templates/main/item-page.html
+++ b/src/main/resources/templates/main/item-page.html
@@ -373,7 +373,7 @@
                     return;
                 }
 
-                if (confirm('장바구니 추가했음. 보러가실?')) {
+                if (confirm('장바구니 추가했음. 확인 ㄱ?')) {
                     location.href = response.url;
                 }
 
