--- a/src/main/resources/templates/main/bag.html
+++ b/src/main/resources/templates/main/bag.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}">
     <meta charset="UTF-8">
     <title>장바구니</title>
     <script src="https://kit.fontawesome.com/53e865f4e7.js" crossorigin="anonymous"></script>
@@ -58,6 +59,16 @@
 
     .item-content {
         padding: 10px;
+    }
+
+    .item-content > a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .item-content > a:hover {
+        text-decoration: underline;
+        color: darkgrey;
     }
 
     #item-price {
@@ -152,6 +163,8 @@
     }
 
 
+
+
 </style>
 <body>
     <h1>장바구니</h1>
@@ -177,18 +190,20 @@
                 </tr>
 
 
-                <tr style="border: 1px solid black" th:each="product : ${products}">
-                    <td class="item-check"><label><input type="checkbox"></label></td>
-                    <td><img th:src="${product.mainImg}" th:alt="메인사진"></td>
+                <tr class="product" style="border: 1px solid black" th:each="cart : ${products}">
+                    <td class="item-check"><label><input class="check" type="checkbox" th:value="${cart.product.price}"></label></td>
+                    <input type="hidden" th:name="no" th:value="${cart.no}">
+                    <td><a th:href="@{|/product/${cart.product.no}|}"><img th:src="${cart.product.mainImg}" th:alt="메인사진"></a></td>
                     <td class="item-content">
-                        <h3 class="item-title" th:text="${product.title}">제목</h3> <br>
+                        <a th:href="@{|/product/${cart.product.no}|}"><h3 class="item-title" th:text="${cart.product.title}">제목</h3></a> <br>
+                        <p th:each="option : ${cart.product.productOptions}" th:text="${option.name}">옵션</p>
                     </td>
                     <td class="item-price">
-                        <div th:text="${product.price}">10,000원</div>
+                        <div th:text="${#numbers.formatInteger(cart.product.price, 0, 'COMMA')} + '원'">10,000원</div>
                         <div class="item-count">
-                            <i class="fa-solid fa-minus"></i>
-                            <label><input type="number" min="1" value="1" readonly></label>
-                            <i class="fa-solid fa-plus"></i>
+                            <i class="fa-solid fa-minus count-btn"></i>
+                            <label><input class="amount" type="number" min="1" th:value="${cart.amount}" readonly></label>
+                            <i class="fa-solid fa-plus count-btn" ></i>
                         </div>
                     </td>
                     <td class="item-remove"><a href="#"><i class="fa-solid fa-x x"></i></a></td>
@@ -200,11 +215,12 @@
 
         <section>
             <div class="buy-title">구매목록</div>
+<!--            <div th:text="${products.}"></div>-->
             <div class="buy-container">
-                <div class="buy-content"><span>상품금액</span><span>145000원</span></div>
+                <div class="buy-content"><span>상품금액</span><span id="price" th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price]), 0, 'COMMA')} + '원'">1450</span></div>
                 <div class="buy-content"><span>배 송 비 </span><span>+ 3000원</span></div>
                 <hr style="margin: 30px 0">
-                <div class="buy-content"><span>결제 예정 금액 </span><span>148000원</span></div>
+                <div class="buy-content"><span>결제 예정 금액 </span><span th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price])+3000, 0, 'COMMA')} + '원'">123</span></div>
             </div>
             <button class="buy-bth">구매하기</button>
         </section>
@@ -214,12 +230,26 @@
 </body>
 </html>
 <script>
+    // check input 배열
+    const itemCheck = document.getElementsByClassName('check');
+    const buyBtn = document.querySelector('.buy-bth');
+    const priceSpan = document.querySelector('#price');
+    const products = document.querySelectorAll('.product');
+    const csrfToken = document.querySelector('meta[name=_csrf]').content;
+    console.log(csrfToken);
 
-    // function 으로 빼려고 했으나 이렇게 하는게 좋겠군
-    const itemCountDivs = document.getElementsByClassName('item-count');
-    [...itemCountDivs].forEach(itemCountDiv => {
-        const [mBtn, pBtn] = itemCountDiv.querySelectorAll('i');
-        const count = itemCountDiv.querySelector('input[type=number]');
+
+
+
+
+
+    [...products].forEach(product => {
+        const shoppingCartNo = product.querySelector('input[name=no]')
+        // console.log(shoppingCartNo)
+        const [mBtn, pBtn] = product.querySelectorAll('.count-btn');
+        // console.log(mBtn, pBtn)
+        const count = product.querySelector('input[type=number]');
+        const x = product.querySelector('.x');
 
         mBtn.onclick = () => {
             if (parseInt(count.value) > 1) {
@@ -227,12 +257,57 @@
             } else {
                 alert('수량은 1보다 같거나 큰 수를 입력해야 합니다.')
             }
+            console.log(shoppingCartNo.value)
+            console.log(count.value)
+            change_product_amount(shoppingCartNo.value, count.value);
         }
 
         pBtn.onclick = () => {
             count.value = parseInt(count.value) + 1;
+            change_product_amount(shoppingCartNo.value, count.value);
         }
+
+        x.onclick = () => {
+            delete_product(shoppingCartNo.value);
+        }
+
+
     })
+
+    function change_product_amount(shoppingCartNo, amount) {
+        fetch(`/user/cart`, {
+            method: 'PATCH',
+            headers: {"X-Csrf-Token": csrfToken, 'Content-Type': 'application/json'},
+            body: JSON.stringify({'no': shoppingCartNo, 'amount': amount})
+        }).then(response => {
+            // console.log(response);
+            if (response.ok) {
+                location.reload();
+            } else {
+                alert('에러남')
+            }
+        })
+    }
+
+    // delete_product();
+
+    function delete_product(productNo) {
+        fetch('/user/cart', {
+            method: 'delete',
+            headers: {"X-Csrf-Token": csrfToken, 'Content-Type': 'application/json'},
+            body: JSON.stringify({"no": productNo})
+        }).then(response => {
+            console.log(response)
+            if (response.ok) {
+                location.reload();
+            } else {
+                alert('에러남')
+            }
+        })
+    }
+
+
+
 
 
 </script>
