--- a/src/main/resources/templates/main/bag.html
+++ b/src/main/resources/templates/main/bag.html
@@ -177,53 +177,58 @@
     </div>
     <hr style="margin: 20px">
     <article>
-        <main>
-            <table>
-                <tr>
-                    <th colspan="5">담은 상품</th>
-                </tr>
-                <tr>
-                    <th id="item-check">선택</th>
-                    <th id="item-img">상품 이미지</th>
-                    <th id="item-content">제목</th>
-                    <th id="item-price">가격</th>
-                </tr>
+        <th:block th:if="${products.size() == 0}">
+            <h2>장바구니에 담긴 물건이 없습니다.</h2>
+        </th:block>
+        <th:block th:if="${products.size() != 0}">
+            <main>
+                    <table>
+                        <tr>
+                            <th colspan="5">담은 상품</th>
+                        </tr>
+                        <tr>
+                            <th id="item-check">선택</th>
+                            <th id="item-img">상품 이미지</th>
+                            <th id="item-content">제목</th>
+                            <th id="item-price">가격</th>
+                        </tr>
+
+                        <tr class="product" style="border: 1px solid black" th:each="cart : ${products}">
+                            <td class="item-check"><label><input class="check" type="checkbox" th:value="${cart.product.price}"></label></td>
+                            <input type="hidden" th:name="no" th:value="${cart.no}">
+                            <td><a th:href="@{|/product/${cart.product.no}|}"><img th:src="${cart.product.mainImg}" th:alt="메인사진"></a></td>
+                            <td class="item-content">
+                                <a th:href="@{|/product/${cart.product.no}|}"><h3 class="item-title" th:text="${cart.product.title}">제목</h3></a> <br>
+                                <p th:each="option : ${cart.product.productOptions}" th:text="${option.name}">옵션</p>
+                            </td>
+                            <td class="item-price">
+                                <div th:text="${#numbers.formatInteger(cart.product.price, 0, 'COMMA')} + '원'">10,000원</div>
+                                <div class="item-count">
+                                    <i class="fa-solid fa-minus count-btn"></i>
+                                    <label><input class="amount" type="number" min="1" th:value="${cart.amount}" readonly></label>
+                                    <i class="fa-solid fa-plus count-btn" ></i>
+                                </div>
+                            </td>
+                            <td class="item-remove"><a href="#"><i class="fa-solid fa-x x"></i></a></td>
+                        </tr>
+
+                    </table>
 
 
-                <tr class="product" style="border: 1px solid black" th:each="cart : ${products}">
-                    <td class="item-check"><label><input class="check" type="checkbox" th:value="${cart.product.price}"></label></td>
-                    <input type="hidden" th:name="no" th:value="${cart.no}">
-                    <td><a th:href="@{|/product/${cart.product.no}|}"><img th:src="${cart.product.mainImg}" th:alt="메인사진"></a></td>
-                    <td class="item-content">
-                        <a th:href="@{|/product/${cart.product.no}|}"><h3 class="item-title" th:text="${cart.product.title}">제목</h3></a> <br>
-                        <p th:each="option : ${cart.product.productOptions}" th:text="${option.name}">옵션</p>
-                    </td>
-                    <td class="item-price">
-                        <div th:text="${#numbers.formatInteger(cart.product.price, 0, 'COMMA')} + '원'">10,000원</div>
-                        <div class="item-count">
-                            <i class="fa-solid fa-minus count-btn"></i>
-                            <label><input class="amount" type="number" min="1" th:value="${cart.amount}" readonly></label>
-                            <i class="fa-solid fa-plus count-btn" ></i>
-                        </div>
-                    </td>
-                    <td class="item-remove"><a href="#"><i class="fa-solid fa-x x"></i></a></td>
-                </tr>
 
-            </table>
-
-        </main>
-
-        <section>
-            <div class="buy-title">구매목록</div>
-<!--            <div th:text="${products.}"></div>-->
-            <div class="buy-container">
-                <div class="buy-content"><span>상품금액</span><span id="price" th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price * amount]), 0, 'COMMA')} + '원'">1450</span></div>
-                <div class="buy-content"><span>배 송 비 </span><span>+ 3000원</span></div>
-                <hr style="margin: 30px 0">
-                <div class="buy-content"><span>결제 예정 금액 </span><span th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price * amount]) + 3000, 0, 'COMMA')} + '원'">123</span></div>
-            </div>
-            <button class="buy-bth">구매하기</button>
-        </section>
+            </main>
+            <section>
+                <div class="buy-title">구매목록</div>
+                <!--            <div th:text="${products.}"></div>-->
+                <div class="buy-container">
+                    <div class="buy-content"><span>상품금액</span><span id="price" th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price * amount]), 0, 'COMMA')} + '원'">1450</span></div>
+                    <div class="buy-content"><span>배 송 비 </span><span>+ 3000원</span></div>
+                    <hr style="margin: 30px 0">
+                    <div class="buy-content"><span>결제 예정 금액 </span><span th:text="${#numbers.formatInteger(#aggregates.sum(products.![product.price * amount]) + 3000, 0, 'COMMA')} + '원'">123</span></div>
+                </div>
+                <button class="buy-bth">구매하기</button>
+            </section>
+        </th:block>
     </article>
 
 
@@ -231,9 +236,6 @@
 </html>
 <script>
     // check input 배열
-    const itemCheck = document.getElementsByClassName('check');
-    const buyBtn = document.querySelector('.buy-bth');
-    const priceSpan = document.querySelector('#price');
     const products = document.querySelectorAll('.product');
     const csrfToken = document.querySelector('meta[name=_csrf]').content;
     console.log(csrfToken);
