--- a/src/main/resources/templates/main/item-page.html
+++ b/src/main/resources/templates/main/item-page.html
@@ -67,11 +67,12 @@
 
     .btn:hover {
         cursor: pointer;
-        background-color: darkgray;
+        /*background-color: darkgray;*/
     }
 
     .remote-container {
-        text-align: center;
+        display: flex;
+        justify-content: space-around;
     }
 
     .control {
@@ -190,7 +191,7 @@
             <img class="item-img" th:src="${product.mainImg}" alt="main-image"/>
             <div class="item-content">
                 <h3 th:text="${product.title}">제에모옥~~~</h3>
-                <div class="item-price"> &#8361; <span th:text="${product.price}">15,000</span></div>
+                <div class="item-price"> &#8361; <span th:text="${#numbers.formatInteger(product.price, 0, 'COMMA')}">15,000</span></div>
                 <hr>
                 <div class="control">
                     <h3 th:if="${product.productOptions.size() != 0}">옵션</h3>
