--- a/src/main/resources/templates/main/shop.html
+++ b/src/main/resources/templates/main/shop.html
@@ -29,7 +29,7 @@
         width: 100%;
         height: 80px;
         /*border: 1px solid black;*/
-        background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz3-nwgWBW3TbiSHcjgqhLKo_bpIFbUAwOHw&usqp=CAU");
+        background-image: url("https://mblogthumb-phinf.pstatic.net/MjAyMDAyMDNfMTAg/MDAxNTgwNzEwMzY5MjM0.hlBG7FOVi0fIA6WURszqg0T_eK3hun4H9uv2iByqpPUg.br7UJh8oWuzJ6ToXXwMaZQ7wWVezvCYUq1nUwWKPuXkg.PNG.louders33/1_04.png?type=w800");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
