--- a/src/main/resources/templates/main/bag.html
+++ b/src/main/resources/templates/main/bag.html
@@ -17,9 +17,9 @@
         padding: 0;
     }
 
-    h1 {
+    h2 {
         text-align: center;
-        margin: 50px;
+        margin: 20px;
         font-size: 3rem;
     }
 
@@ -162,12 +162,22 @@
         background-color: #3a3a88;
     }
 
+    .main-logo {
+        display: block;
+        text-align: center;
+    }
 
+    #main-logo {
+        width: 30%;
+        height: 120px;
+    }
 
 
 </style>
 <body>
-    <h1>장바구니</h1>
+<a class="main-logo" href="/"><img id="main-logo" src="https://mblogthumb-phinf.pstatic.net/MjAyMDAyMDNfMTAg/MDAxNTgwNzEwMzY5MjM0.hlBG7FOVi0fIA6WURszqg0T_eK3hun4H9uv2iByqpPUg.br7UJh8oWuzJ6ToXXwMaZQ7wWVezvCYUq1nUwWKPuXkg.PNG.louders33/1_04.png?type=w800" alt="main-logo"></a>
+
+<!--    <div>장바구니</div>-->
     <div class="progress-chart">
         <span style="font-weight: bold">장바구니</span>
         <i class="fa-solid fa-chevron-right" style="color: darkgray"></i>
@@ -176,6 +186,7 @@
         <span style="color: darkgray">주문완료</span>
     </div>
     <hr style="margin: 20px">
+    <h2>장바구니</h2>
     <article>
         <th:block th:if="${products.size() == 0}">
             <h2>장바구니에 담긴 물건이 없습니다.</h2>
