--- a/src/main/resources/templates/user/user-re-info.html
+++ b/src/main/resources/templates/user/user-re-info.html
@@ -195,6 +195,10 @@
 <script>
     const [select1, select2] = document.querySelectorAll('input[type=radio]');
     const [user, addr] = document.querySelectorAll('section');
+    // const addrhtml = document.querySelector('.join-icon');
+    // addrhtml.onclick = () => {
+    //     window.open('addr')
+    // }
 
     select1.onchange = () => {
         user.style.display='block';
