--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -40,7 +40,7 @@
 
     function request_order (merchant_uid) {
         IMP.request_pay({
-            pg: "kakaopay.imp07007375",
+            pg: "kakaopay.",
             merchant_uid: merchant_uid,   // 주문번호
             name: "테스트용",
             amount: 1004,                         // 숫자 타입
